@@ -5,13 +5,24 @@ Trunk (unreleased changes)
   NEW FEATURES
 
   IMPROVEMENTS
+    
+    HADOOP-5373   Collectors track lifetime-received chunks. (asrabkin)
 
+    HADOOP-5370   Collectors don't write empty sink files (asrabkin)
+
+	
   OPTIMIZATIONS
 
   BUG FIXES
 
     HADOOP-5138. Fixing failing test cases by separating TestCharFileTailing
     and TestFileTailing adaptors. (Jerome Boulon via acmurthy)
+
+    HADOOP-5401. Standardize control port conf option name as chukwaAgent.control.port (asrabkin)
+
+    HADOOP-5087. Fix regex for command parsing. (asrabkin)
+
+    HADOOP-5057. Better test coverage for missing checkpoint cases. (asrabkin)
 
 Release 0.19.0 - Unreleased
 
@@ -26,6 +37,7 @@ Release 0.19.0 - Unreleased
     HADOOP-5205.  Change the value of CHUKWA_IDENT_STRING from demo to TODO-AGENTS-INSTANCE-NAME in chukwa-env.sh.template (Jerome Boulon via asrabkin)
 
     HADOOP-5033.  Simplified ChukwaWriter API.  (asrabkin)
+
 
   NEW FEATURES
 
